# test-rs

./: Cargo.toml
rustup_dependencies/: SDL2_gfx.lib
src/: asset_manager.rs  config.rs  entity.rs  main.rs  renderer.rs
