[package]
name = "game-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
glam = "0.8.5"
rusty_audio = "1.4.1"

[dependencies.sdl2]
version = "0.36"
default-features = false
features = ["image", "gfx", "ttf", "static-link", "use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo,tiff,libwebp]", "sdl2-ttf", "sdl2-gfx"]
git = "https://github.com/microsoft/vcpkg"
rev = "d953973cfbfeaf8022f5219fbabb0bdf9defb706"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }